# apps

./: Cargo.toml  STRUCTURE.md  build-all-archs.sh
.cargo/: config.toml
cli/apt/: Cargo.toml
cli/apt-get/: Cargo.toml
cli/apt-get/src/: main.rs
cli/apt/src/: main.rs
cli/bootctl/: Cargo.toml
cli/bootctl/src/: main.rs
cli/capctl/: Cargo.toml
cli/capctl/src/: main.rs
cli/dnslookup/: Cargo.toml
cli/dnslookup/src/: main.rs
cli/editor/: Cargo.toml
cli/editor/src/: main.rs
cli/fwctl/: Cargo.toml
cli/fwctl/src/: main.rs
cli/installer/: Cargo.toml
cli/installer/src/: main.rs
cli/ip/: Cargo.toml
cli/ip/src/: main.rs
cli/login/: Cargo.toml
cli/login/src/: main.rs
cli/logview/: Cargo.toml
cli/logview/src/: main.rs
cli/ping/: Cargo.toml
cli/ping/src/: main.rs
cli/pkg-compat/: Cargo.toml
cli/pkg-compat/src/: main.rs
cli/rpg/: Cargo.toml
cli/rpg/src/: main.rs
cli/sbctl/: Cargo.toml
cli/sbctl/src/: main.rs
cli/ssh/: Cargo.toml
cli/ssh/src/: main.rs
cli/svc/: Cargo.toml
cli/svc/src/: main.rs
cli/tar/: Cargo.toml
cli/tar/src/: main.rs
gui/docs/: contributing.md
gui/docs/architecture/: accessibility-testing.md  accessibility.md  appimage-support.md  application-library.md  compositor.md  desktop-portal.md  display-stack.md  dock.md  error-handling.md  event-model.md  file-manager.md  flatpak-integration.md  hidpi.md  ime.md  initial-setup.md  integration-tests.md  ipc-bridge.md  launcher.md  login-greeter.md  mobile-battery.md  mobile-components.md  notifications.md  onscreen-keyboard.md  package-integration.md  panel.md  performance-testing.md  persistence.md  process-model.md  rendering.md  screenshot.md  sensor-framework.md  session-manager.md  settings-daemon.md  settings-full.md  system-architecture.md  terminal.md  testing-framework.md  text-editor.md  theme-engine.md  theme.md  (+5 more)
gui/docs/documentation/: api.md  developer.md  user.md
gui/docs/prototypes/: file-manager.md  panel.md  settings.md
gui/docs/specifications/: browser.md
gui/rustica-comp/: Cargo.toml
gui/rustica-comp/src/: compositor.rs  main.rs  state.rs
gui/rustica-comp/src/input/: mod.rs
gui/rustica-web/: Cargo.toml
gui/rustica-web/resources/: org.rustica.WebBrowser.desktop
gui/rustica-web/src/: main.rs
libs/netlib/: Cargo.toml
libs/netlib/src/: icmp.rs  lib.rs  netlink.rs  raw.rs
libs/rutils/: Cargo.toml
libs/rutils/src/: auth.rs  config.rs  file.rs  lib.rs  process.rs
