# Copyright 2025 The Rustux Authors
#
# Use of this source code is governed by a MIT-style
# license that can be found in the LICENSE file or at
# https://opensource.org/licenses/MIT

[package]
name = "rustux-apt-get"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "apt-get"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
