[package]
name = "fwctl"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "fwctl"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
clap.workspace = true
log.workspace = true
rutils = { path = "../../libs/rutils" }
nix = { version = "0.27", features = ["socket"] }
libc.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
