[package]
name = "ip"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ip"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
clap.workspace = true
log.workspace = true
netlib = { path = "../../libs/netlib" }
nix = { version = "0.27", features = ["socket", "net"] }
libc.workspace = true
