# Copyright 2025 The Rustux Authors
#
# Use of this source code is governed by a MIT-style
# license that can be found in the LICENSE file or at
# https://opensource.org/licenses/MIT

[package]
name = "pkg-compat"
version.workspace = true
edition.workspace = true

[[bin]]
name = "pkg"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
