[package]
name = "rpg"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "rpg"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
clap.workspace = true
log.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
sha2.workspace = true
hex.workspace = true
dirs.workspace = true
rutils = { path = "../../libs/rutils", features = ["serde", "serde_json", "sha2", "hex"] }
flate2 = "1.0"
tar = "0.4"
chrono = "0.4"
futures-util = "0.3"
ed25519-dalek = "2.1"
base64 = "0.22"
rand = "0.8"
