[package]
name = "svc"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "svc"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
clap.workspace = true
log.workspace = true
rutils = { path = "../../libs/rutils", features = ["serde", "serde_json"] }
nix.workspace = true
libc.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shell-words = "1.1"
