[package]
name = "rustica-web"
version = "0.1.0"
edition = "2021"
authors = ["Rustica OS Developers"]
description = "Rustica Web Browser - WebKitGTK-based browser for Rustica OS"

[dependencies]
# GTK3 for UI (WebKitGTK 2.x uses GTK3)
gtk = { version = "0.18", features = ["v3_24"] }

# WebKitGTK for web rendering (GTK3 version)
webkit2gtk = { version = "2.0", features = ["v2_38"] }

# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
url = "2.5"
urlencoding = "2.1"
once_cell = "1.19"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[[bin]]
name = "rustica-web"
path = "src/main.rs"
