[package]
name = "netlib"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
nix = { version = "0.27", features = ["socket", "net"] }
libc.workspace = true
sha2.workspace = true
hex.workspace = true
