[package]
name = "rutils"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
nix = { version = "0.27", features = ["user", "process", "socket", "term", "mount", "signal"] }
libc.workspace = true
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
sha2 = { version = "0.10", optional = true }
hex = { version = "0.4", optional = true }
